# gen-ai

./: pyproject.toml  requirements.txt
generativeai/: agent-multipleTools.ipynb  agentic.ipynb  langchain-intro.ipynb  tools.ipynb
